<resources>
    <string name="app_name">Students</string>
    <string name="edit_student_title">Edit Student</string>
    <string name="name_hint">Name</string>
    <string name="id_hint">ID</string>
    <string name="phone_hint">Phone</string>
    <string name="address_hint">Address</string>
    <string name="is_checked">Checked</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="save_button">Save</string>
    <string name="delete_confirmation_title">Delete Student</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this student?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_missing_fields">Please fill all fields</string>
    <string name="error_update_failed">Update failed. ID might already exist.</string>
    <string name="student_id_label">ID: %s</string>
    <string name="student_phone_label">Phone: %s</string>
    <string name="student_address_label">Address: %s</string>
    <string name="student_checked_label">Checked</string>

    <item name="student_name_hint" type="string">@string/name_hint</item>
    <item name="student_id_hint" type="string">@string/id_hint</item>
    <item name="student_phone_hint" type="string">@string/phone_hint</item>
    <item name="student_address_hint" type="string">@string/address_hint</item>
    <string name="error_student_exists">Student with this ID already exists</string>
    <string name="title_activity_add_student">Add Student</string>
    <string name="title_activity_student_details">Student Details</string>
    <string name="title_activity_edit_student">Edit Student</string>
    <string name="back_button">Back</string>
    <string name="edit_button">Edit</string>
</resources>