<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.EditStudentActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/edit_student_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/edit_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/name_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/id_hint"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_student_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/phone_hint"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edit_student_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress" />

            <CheckBox
                android:id="@+id/edit_student_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/is_checked" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_container"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/edit_student_delete_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#F44336"
            android:text="@string/delete_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/edit_student_save_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
